very basic api test

--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
-    "cypress": "^11.1.0"
+    "cypress": "^11.1.0",
+    "jest": "^29.3.1",
+    "octokit": "^2.0.10"
   },
   "scripts": {
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run",
+    "apitests": "jest"
   }
 }
